--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ before_install:
   - set_application_folder "$APPLICATION_FOLDER"
   - set_sketchbook_folder "$SKETCHBOOK_FOLDER"
 
-  - install_ide "1.6.0" "hourly"
+  - install_ide '("1.6.5-r5" "1.6.9" "1.6.13" "1.8.5" "newest")'
 
 
 script:
