--- a/.travis.yml
+++ b/.travis.yml
@@ -26,13 +26,18 @@ before_install:
   # Check for files that don't end in a newline (https://stackoverflow.com/a/25686825)
   - find . -path ./.git -prune -o -type f -print0 | xargs -0 -L1 bash -c 'if test "$(grep --files-with-matches --binary-files=without-match --max-count=1 --regexp='.*' "$0")" && test "$(tail --bytes=1 "$0")"; then echo "No new line at end of $0."; false; fi'
 
-  - git clone https://github.com/per1234/arduino-ci-script.git "${HOME}/scripts"
-  - cd "${HOME}/scripts"
+  # Check for typos
+  - git clone https://github.com/ss18/grep-typos.git "${HOME}/scripts/grep-typos"
+  - find "$TRAVIS_BUILD_DIR" -path "${TRAVIS_BUILD_DIR}/.git" -prune -or -type f -print0 | xargs --null --max-args=1 bash "${HOME}/scripts/grep-typos/grep_typos.sh" "$0"
+  - rm "${HOME}/scripts/grep-typos" --recursive --force
+
+  - git clone https://github.com/per1234/arduino-ci-script.git "${HOME}/scripts/arduino-ci-script"
+  - cd "${HOME}/scripts/arduino-ci-script"
   # Get new tags from the remote
   - git fetch --tags
   # Checkout the latest tag
   - git checkout $(git describe --tags `git rev-list --tags --max-count=1`)
-  - source "${HOME}/scripts/arduino-ci-script.sh"
+  - source "${HOME}/scripts/arduino-ci-script/arduino-ci-script.sh"
 
   # Uncomment the following lines to get verbose output for debugging
   # 0 (minimum/default) - 2 (maximum) verbosity
